--- a/src/main/java/com/utfpr/projetoanalisedesistemas/CardScreen.form
+++ b/src/main/java/com/utfpr/projetoanalisedesistemas/CardScreen.form
@@ -152,17 +152,17 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="l_name" min="-2" pref="207" max="-2" attributes="0"/>
-                      <EmptySpace pref="163" max="32767" attributes="0"/>
-                      <Component id="f_person" pref="480" max="32767" attributes="0"/>
+                      <Component id="l_name" min="-2" pref="250" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="120" max="-2" attributes="0"/>
+                      <Component id="f_person" min="-2" pref="480" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="6" max="-2" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="l_name" alignment="1" pref="50" max="32767" attributes="0"/>
-                  <Component id="f_person" alignment="1" max="32767" attributes="0"/>
+                  <Component id="l_name" alignment="1" max="32767" attributes="0"/>
+                  <Component id="f_person" alignment="1" min="-2" pref="50" max="-2" attributes="0"/>
               </Group>
             </DimensionLayout>
           </Layout>
@@ -269,17 +269,17 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="l_number" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace pref="130" max="32767" attributes="0"/>
-                      <Component id="f_cardNumber" pref="480" max="32767" attributes="0"/>
+                      <Component id="l_number" min="-2" pref="250" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="120" max="-2" attributes="0"/>
+                      <Component id="f_cardNumber" min="-2" pref="480" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="l_number" alignment="0" pref="50" max="32767" attributes="0"/>
-                  <Component id="f_cardNumber" alignment="0" max="32767" attributes="0"/>
+                  <Component id="l_number" alignment="0" max="32767" attributes="0"/>
+                  <Component id="f_cardNumber" alignment="0" min="-2" pref="50" max="-2" attributes="0"/>
               </Group>
             </DimensionLayout>
           </Layout>
@@ -306,6 +306,9 @@
                   <Font name="Segoe UI" size="14" style="0"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="f_cardNumberActionPerformed"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
